--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,7 +45,10 @@ select {
 .resultsPage .itemImagesDiv:hover {
   box-shadow: 0px 0px 10px 0px #ffffff;
   transform: rotate(1.5deg) scale(1.04) translate(-10px);
-  transition: transform 1s, box-shadow 1s, opacity 1s;
+  transition:
+    transform 1s,
+    box-shadow 1s,
+    opacity 1s;
 }
 
 /*******************Media Queries*******************/
