--- a/frontend/src/styles/Gallery.css
+++ b/frontend/src/styles/Gallery.css
@@ -21,5 +21,7 @@ input::placeholder {
 }
 
 .galery-shadow img {
-  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  box-shadow:
+    0 4px 8px 0 rgb(0 0 0 / 20%),
+    0 6px 20px 0 rgb(0 0 0 / 19%);
 }
